fixed white gaps and changed display course and added overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html{
       padding: .5em;
       background-repeat: no-repeat, no-repeat, repeat;
       background-position: left center,right center, left;
-
+      overflow:hidden;
     }
     h1{
       text-align:center;
@@ -22,13 +22,13 @@ html{
       text-align: center;
       position: absolute;
       color: white;
-      top:60%;
-      left:10%;
-      right:10%;
-      padding: 0;
-      display: inline-block;
+      bottom:0;
+      padding: 2em;
       font-family: 'Dosis', sans-serif;
       font-size: 15px;
+      background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5));
+      width:100%;
+      margin:0;
     }
     nav{
       font-weight: normal;
@@ -58,22 +58,22 @@ html{
       padding:0;
       margin: 0;
       position: relative;
-      display:inline-block;
+      display:block;
 
     }
     .grav{
-      display: inline-block;
       position: relative;
       width:100%;
-      
     }
     main{
       padding: 0;
       margin: 0 auto;
+      overflow:hidden;
     }
     body{
       margin:0;
       padding:0;
+      overflow:hidden;
     }
     main{
       padding:0;
@@ -84,6 +84,7 @@ html{
       float:left;
       margin: 0 auto;
       padding: 0;
+      overflow: hidden;
     }
     .btn{
       position: absolute;
@@ -147,11 +148,15 @@ html{
   width:50%;
   float:right;
   margin: 0 auto;
+  overflow:hidden;
+  display:block;
 }
 .beetle3{
   width: 50%;
   float:left;
   margin: 0;
+  overflow:hidden;
+  display:block;
   }
 .btn:hover{
   background-color: #58A601;
@@ -168,11 +173,13 @@ html{
     .beetle4{
       width: 50%;
       float:right;
+      overflow: hidden;
+      display:block;
 
     }
     a:hover{
       background-color: #933D02;
-      opacity: .5;
+      opacity: .8;
       color: white;
     }
 
@@ -180,23 +187,25 @@ html{
       width:10%;
       position: relative;
       left: 45%;
+      overflow: hidden;
     }
 .box1{
   position: relative;
   padding:0;
   margin: 0 auto;
-  display:inline-block;
   width: 100%;
+  overflow: hidden;
 }
 .box2{
   position: relative;
   padding: 0;
   margin:0;
-  display: inline-block;
   width: 100%;
+  overflow: hidden;
 }
 .foot{
   background-color: #512200;
   padding:.5em;
   width: 100%;
+  overflow:hidden;
 }
